# postgres_async_template

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  config.toml  create_openapi.py  formatting.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/user/: schema.py  user_api.py
backend/app/db/: __init_.py  __init__.py
backend/app/db/alembic/: env.py
backend/app/db/alembic/versions/: 1c9887da18dd_initial_revision.py
backend/app/db/models/: model_export.py  users.py
frontend/: README.md  create_backend_openapi_template.sh
tests/backend_tests/: __init__.py
tests/backend_tests/user_tests/: user_test.py
